# pycountry

./: .gitignore  .pre-commit-config.yaml  HISTORY.txt  Makefile  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yml
src/pycountry/: __init__.py  db.py
src/pycountry/tests/: test_general.py
